Fixed header text alignment

--- a/Dev/style.sass
+++ b/Dev/style.sass
@@ -324,9 +324,10 @@ h3
 
     .headerText
         width: 100%
+        padding: 10px !important
 
     .headerTextInner
-        margin: 25px
+        margin: auto
 
     .progress
         max-width: 80%
